testData/src/error/java/comment/MissingCommentText.java
package error.java.comment;

/**
 * @since 1.1
 * @version
 * @date
 * @author wuhao
 */
public class MissingMethodComment {


  public void doSomething() {

  }

}
